--- a/src/styles/battle/bottom_bar.css
+++ b/src/styles/battle/bottom_bar.css
@@ -167,12 +167,18 @@
     transition: 1s;
 }
 
-.main__container__cards .card_container:hover .card_display img {
-    display: block;
+.skill__card {
+    width: 190px;
+    height: 300px;
+    background-color: rgb(247, 0, 255);
 }
 
-.main__container__cards .card_container:hover {
+.skill__card:hover {
     transform: translateY(-5rem);
+}
+
+.skill__card:hover .card__display img {
+    display: block;
 }
 
 .text__container {
