--- a/src/styles/battle/super_form.css
+++ b/src/styles/battle/super_form.css
@@ -5,3 +5,24 @@
 #super-form-card-display {
     width: 100%;
 }
+
+#super-form-background {
+    background-color: white;
+    position: absolute;
+    top: 50%;
+    right: 50%;
+    display: none;
+    flex-direction: column;
+    height: 0px;
+    width: 0px;
+    border-radius: 50%;
+    transition: 4s;
+}
+
+#super-form-status {
+    display: none;
+    flex-direction: column;
+    position: absolute;
+    top: 40%;
+    right: 55%;
+}
